sandbox/output
TicketDispenserTest.java:45: error: cannot find symbol
        mockSequence.verifyMethodGetNextTurnNumberCalledOnce();
                    ^
  symbol:   method verifyMethodGetNextTurnNumberCalledOnce()
  location: variable mockSequence of type MockTurnNumberSequence
1 error
